real feed memes added

--- a/instructions/instruct_3.html
+++ b/instructions/instruct_3.html
@@ -1,8 +1,9 @@
 {{ block content }}
-<p>In summary, you can post Memes yourself and rate Memes posted by the other Users. You can post your own Memes whenever and as often as you want, and Like the Memes posted by other Users. 
+<p>In summary, you can post Memes yourself and rate Memes.
+You can post your own Memes whenever and as often as you want, and Like/Dislike the Memes in the feed.
 Feel free to try out the different possibilities.</p>
-When you are ready to begin the real experiment, press the button below. (◕ᴗ◕✿)  
-<br /><br />
-<button class="btn btn-primary">I was born ready</button>
+ 
+<br /><br /> 
+<button class="btn btn-primary">neeeeext</button>
 {{ endblock }}
 
