--- a/meme_game/Feed.html
+++ b/meme_game/Feed.html
@@ -33,15 +33,13 @@
         justify-content: center;
     }
 
+    /* for dislike text */
     #dislike {
         padding-left: 1em;
     }
 </style>
 
 <script>
-    // Load Treatment
-    sTreat = js_vars.sTreat
-    
     // Hidden Next Button
     let EndButton               = document.createElement('button');
     EndButton.style.visibility  = 'hidden';
@@ -83,27 +81,15 @@
             EndButton.click();
         }
         });
-
-        // Check for treatment
-        console.log(sTreat);
-        if (sTreat=='Like') {
-            // Hide dislike option
-            let x = document.getElementById('dislike');
-            x.style.visibility = 'hidden';
-        } else if (sTreat=='Dislike') {
-            // Add EventListener for Dislike with K
-            document.addEventListener("keyup", function(event) {
-            if (event.keyCode === 75) {
-                // change input value
-                iDec.value = 'K';
-                console.log('K was pressed');
-                TEnd      = new Date().getTime();
-                dRT.value = +TEnd -TStart;
-                // press next button
-                EndButton.click();
+        document.addEventListener("keyup", function(event) {
+        if (event.keyCode === 75) {
+             iDec.value = 'K';
+            console.log('K was pressed');
+            TEnd      = new Date().getTime();
+            dRT.value = +TEnd -TStart;
+            EndButton.click();
             }
         });
-        }
     });
 </script>
 
@@ -115,15 +101,11 @@
         <p>
             Press 'L' to like 
         </p>
-        <p id="dislike">
+        <p id='dislike'>
             or 'K' to dislike
         </p>
     </div>
-
 </div>
 
 
-
 {% endblock %}
-
-
