final instructions, formatting, added comprehension test and wait page

--- a/questionnaire/End.html
+++ b/questionnaire/End.html
@@ -1,12 +1,20 @@
 {{ block title }}
-    <!-- see ya later alligater xD -->
+    This is the End, my only friend
 {{ endblock }}
 
 {{ block content }}
+<style>
+    div {text-align: center;}
+</style>
 
-Thank you for participating in our experiment! <br/>
-And for contributing to science. If you are curious about the  <br>
-<!-- ADD meme and debrief information <br> -->
+<div>
+    <h3>Thank you for participating in the experiment! </h3>
+    <p>(And for rating memes for science)</p>
+    <p>If you are curious about anything, or have any doubts, feel free to contact me! 
+        (violeta.cespedes@live.com) </p>
+    <br>
+    <img style='height: 550px; width: 80%; object-fit: contain' src="{% static 'global/ThesisLife.jpg' %}">
+</div>
 
 {{ endblock }}
 
