--- a/questionnaire/SMS.html
+++ b/questionnaire/SMS.html
@@ -2,17 +2,12 @@
 Some last questions...
 {{ endblock }}
 {{ block content }}
-​
-<br/>
-<br/>
+
 <p style="text-align: justify;">Social media refers to internet/mobile phone sites such as Facebook, YouTube, Twitter, Instagram, as well as to blogs. </p>
 <div>&nbsp;</div>
-<p style="text-align: justify;">During the past year, have you ...</p>
-
+<p style="text-align: justify;"><b>During the past year, have you ...</b></p>
 
 {{ formfields }}
 ​
-​
-
 <button class="btn btn-primary">thank u, next</button>
 {{ endblock }}
