--- a/instructions/consent.html
+++ b/instructions/consent.html
@@ -1,13 +1,19 @@
 
 {{ block content }}
 
-<img src="{{ static 'UvA.jpeg' }}" class="center"/>
+<img src="{{ static 'global/UvA.jpeg' }}" class="center"/>
 <style>
   .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+  }
+  .centered {
+    text-align: center;
+    max-width:100%;
+    max-height:100%;
+    color:red;
   }
 </style>
 
@@ -17,28 +23,26 @@
 <br>First of all, thank you for deciding to participate in this experiment.
 
 <br><br>
-This study is part of a Master's thesis in Neuroeconomics at the University of Amsterdam (UvA). 
-It is conducted by Violeta Céspedes with the supervision of Alejandro Hirmas Frisius. 
-Your participation in this study will require approximately 15 – 20 minutes, please make sure that you have sufficient time to complete it.
-
-<br><br>
 In this study, we want to learn more about how people behave on social media.
+The study consists of multiple parts, including instructions, questions and interacting within a social media platform.
+Your full participation in this study will require approximately <b>15 – 20 minutes</b>, please make sure that you have sufficient time to complete it.
+The interaction within the social media platform part will be short and fast paced. For this short period you will need your full attention. Please try to remove any distractions now before you continue (e.g sounds).
 
 <br><br>
-At the end of the study, several demographic questions will be asked for statistical purposes. Your identity will remain completely anonymous. 
-All information you provide will remain confidential and will not be associated with your name. 
-Any identifying information collected in the study will be deleted after data collection is complete.
-Your personal information (about who you are) remains confidential and will not be shared without your explicit consent. Your research data will be analyzed by the researchers that collected the information. Research data that are published in scientific journals will be anonymous and cannot be traced back to you as an individual. 
-Completely anonymized data can be made publicly accessible, but your identity will under no circumstance be identifiable. 
+At the end of the study, several demographic questions will be asked for statistical purposes. <b>Your identity will remain completely anonymous. </b>
+All information you provide will remain confidential. Completely anonymized data can be made publicly accessible, but your identity will under no circumstance be identifiable. 
 <br><br>
-
+This study is part of a Master's thesis in Neuroeconomics at the University of Amsterdam (UvA). 
+It has been designed and programmed by Violeta Céspedes with the supervision of Alejandro Hirmas Frisius. 
 If you have any questions about this study or concerns about privacy, please feel free to contact me (violeta.cespedes@live.com). 
 
 <br><br>
-Important note: it is <b>not possible</b> to participate in this study using a smartphone. You must use a laptop/computer.
+<div class="centered">
+  <b>Important note! It is not possible to participate in this study using a smartphone. You need to use a computer.</b>
+</div>
 
 <br><br>
-By clicking the button below, you acknowledge that your participation in the study is voluntary, you are over 16 years of age, 
+By clicking the button below, you acknowledge that your participation in the study is voluntary, you are over 14 years of age, 
 and that you are aware that you may choose to terminate your participation in the study at any time and for any reason.
 {{formfields}}
 
