--- a/instructions/instruct_0.html
+++ b/instructions/instruct_0.html
@@ -1,18 +1,31 @@
+{{ block title }}
+    Instructions
+{{ endblock }}
+
 {{ block content }}
-<p>In this study, you will be interacting with a platform that is meant to resemble aspects of social media (for example, Instagram).</p>
-<br>
-<p>You can either post “Memes” (humorous pictures) or see and rate Memes posted by other Users in the Feed. 
 
-In an earlier part of this study, these memes were rated with a like or dislike by 40 independent participants.
-Thus, the feedback you will receive for your posts is <strong>real</strong>. 
-This feedback will be displayed to you in the form of likes or dislikes, after you select to post.
+<style>
+    .centered {
+      text-align: center;
+      max-width:100%;
+      max-height:100%;
+    }
+</style>
+  
+<p>In this study, you will be interacting within a platform that is meant to resemble aspects of social media (for example, Instagram).
+You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in the Feed. </p>
 
-You rate the Memes posted by other Users by giving them a like or a dislike. </p>
+<p>This is a preview of how the platform will look like: </p>
+<div class="centered">
+    <img style='height: 100%; width: 80%; object-fit: contain' src="{% static 'global/Instructions.png' %}">
+</div>
 
-<!-- When you're ready to continue, press <strong>Next</strong>.	
-make buttons pretty? -->
+<p>You can post Memes whenever you want. Each time you decide to post a Meme, <b>you select among a set of six potentially funny, interesting or relatable Meme pictures</b>. 
+Please select the Meme you like the best and that you think the others will like as well. You select a meme by <b>PRESSING A NUMBER IN YOUR KEYBOARD</b>.
 <br>
-<br>
+<p>In an earlier part of this study, these memes were rated by 40 independent participants.
+Thus, the feedback you will receive after you post is <strong>real</strong>. 
+The maximum number of Likes that a post received during the ratings was 34, and the minimum was 13.</p>
 <br>
 <button class="btn btn-primary">thank u, next</button>
 {{ endblock }}
