--- a/instructions/instruct_1.html
+++ b/instructions/instruct_1.html
@@ -1,11 +1,21 @@
-{{ block content }}
-<p>You can post Memes whenever you want. Each time you decide to post a Meme, you select among a set of six potentially funny, interesting or relatable Meme pictures. 
-    Please select the Meme you like the best and that you think the others will like as well.</p>
-<br>
-<p>
-    After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. These tags will be used in a future study.
-    It is therefore important that your tags are as clear and descriptive as possible. 
-    However, this is not required to post an image. You are free to do this step as you would be in real social media.</p>
+{{ block title }}
+    Instructions
+{{ endblock }}
 
+{{ block content }}
+
+<p>After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. 
+    These tags might be used for the data analysis of the study. It is therefore important that your tags are as clear and descriptive as possible.
+    However, this is not required to post an image. <b>You are free to do this step</b> as you would be in real social media.</p>
+
+<p>After you have selected the tags, your post is ready and you will see the real feedback associated with the image.
+You will then be asked to report your emotional status. Please note you are <b>required to report your status</b> in order to continue.</p>
+<br>
+<b>Summary:</b>
+<p>You can post Memes as often as you want and/or see and rate the Memes in the feed, for the whole duration of the experiment.
+Feel free to try out the different possibilities.</p>
+<br>
+<p><b>Before we proceed with the experiment, you will be asked a few questions about the instructions in order to see if you understood them correctly.</b></p>
+<br>
 <button class="btn btn-primary">thank u, next</button>
 {{ endblock }}
