--- a/meme_game/Feedback.html
+++ b/meme_game/Feedback.html
@@ -1,34 +1,17 @@
 {{ block title }}
-    Your feedback
+<div class="centered">Your feedback</div>
 {{ endblock }}
 
 {{ block content }}
 
+<div class="centered">
 <p id="liketext"><label id="iLikes" value="{{l}}">{{l}}</label>  <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span> people out of 40 liked your post</p>
-<p id="disliketext"><label id="iDislikes" value="{{d}}">{{d}}</label> people out of 40 did not like your post</p>
-
-	<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script> 
-	<script> 
-	var R = Raphael(40, 50, 1200, 1000); // Creates canvas 320 × 200 at 40, 50
-	var dot = R.circle(250, 150, 30).attr({ 
-	fill: "#FFF", 
-	stroke: "#000", 
-	"stroke-width": 1 
-	}); 
-	</script> -->
-
-	<!-- <body>
-		<div class = "heart"></div>
-	</body>
-
-	to test if it creates the heart --> 
-
-
-
+<p id="disliketext"><label id="iDislikes" value="{{d}}">{{d}}</label> <span style="font-size:100%; color:rgb(128, 18, 18);">&#128148;</span>      people out of 40 did not like your post</p>
+</div>
+<br>
+<br>
 <script>
-
 // if you do not put this stuff it will not get saved
-
 let l        	= document.createElement("input");
 	l.type       = 'hidden';
 	l.name       = 'iLikes';
@@ -88,74 +71,19 @@ let dRT          = document.createElement("input");
         });
 </script>
 
-<div class="button">
-	 <button class="btn btn-primary">Continue </button> 
+<div class="centered">
+<button class="btn btn-primary">Continue </button> 
 </div>
 
 <style>
-form .buttons button {
-	padding: 5px 10px;
-	background-color: #67ab49;
-	border: 0;
-	border-radius: 3px;
-	}
-
-form .buttons .btn-primary {background-color: #67ab49;} 
-form .buttons .btn-primary:hover {background-color: #14892c;}  
+.centered {
+    text-align: center;
+    max-width:100%;
+    max-height:100%;
+}
 </style>
 
-<style>
-	.heart {
-	   z-index : 999;
-	   position : absolute;
-	}
-	.heart:before,
-	.heart:after {
-	   content : "";
-	   background-color : #fc2a62;
-	   position : absolute;
-	   height : 30px;
-	   width : 45px;
-	   border-radius : 15px 0px 0px 15px;
-	}
-	.heart:before {
-	   transform : rotate(45deg);
-	}
-	.heart:after {
-	   left : 10.5px;
-	   transform : rotate(135deg);
-	}  	
-</style>
-	
-<script>
-	var brd = document.createElement("DIV");
-	document.body.insertBefore(brd, document.getElementById("board"));
-	// const duration = 3000;
-	// const speed = 0.5;
-	// const cursorXOffset = 0;
-	// const cursorYOffset = -5;
-	var hearts = [];
-	function generateHeart(x, y, scale)
-	{
-	   var heart = document.createElement("DIV");
-	   heart.setAttribute('class', 'heart');
-	   brd.appendChild(heart);
-	// heart.time = duration;
-	   heart.x = x;
-	   heart.y = y;
-	// heart.bound = xBound;
-	// heart.direction = xStart;
-	   heart.style.left = heart.x + "px";
-	   heart.style.top = heart.y + "px";
-	   heart.scale = scale;
-	   heart.style.transform = "scale(" + scale + "," + scale + ")";
-	   if(hearts == null)
-		hearts = [];
-	   hearts.push(heart);
-	   return heart;
-	}
-	</script>
-	<script> 
+<script> 
 	// //show otree timer lasy 10 sec
 	// $(function () {
 	// 	$('.otree-timer__time-left').on('update.countdown', function (event) {
@@ -165,15 +93,6 @@ form .buttons .btn-primary:hover {background-color: #14892c;}
 	// 	});
 	// });
 	// 
-	</script>
-
-<script>
-	// generateHeart(500, 195, 1);
-	// generateHeart(550, 195, 1);
-	// generateHeart(600, 195, 1);
-	// generateHeart(650, 195, 1);
-	// generateHeart(690, 190, 1);
-	// generateHeart(750, 190, 1);
 </script>
 
 
