Fixing data storage in the back-end and introducing self functions

--- a/instructions/instruct_0.html
+++ b/instructions/instruct_0.html
@@ -20,7 +20,7 @@ You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b
     <img style='height: 100%; width: 80%; object-fit: contain' src="{% static 'global/Instructions.png' %}">
 </div>
 
-<p>You can post Memes whenever you want. Each time you decide to post a Meme, <b>you select among a set of six potentially funny, interesting or relatable Meme pictures</b>. 
+<p>You can post Memes whenever you want by pressing the "POST" button. Each time you decide to post a Meme, <b>you select among a set of six potentially funny, interesting or relatable Meme pictures</b>. 
 Please select the Meme you like the best and that you think the others will like as well. You select a meme by <b>PRESSING A NUMBER IN YOUR KEYBOARD</b>.
 <br>
 <p>In an earlier part of this study, these memes were rated by 40 independent participants.
