--- a/questionnaire/End.html
+++ b/questionnaire/End.html
@@ -10,7 +10,7 @@
 <div>
     <h3>Thank you for participating in the experiment! </h3>
     <p>(And for rating memes for science)</p>
-    <p>If you are curious about anything, or have any doubts, feel free to contact me! 
+    <p>If you are curious about anything or have any doubts, feel free to contact me! 
         (violeta.cespedes@live.com) </p>
     <br>
     <img style='height: 550px; width: 80%; object-fit: contain' src="{% static 'global/ThesisLife.jpg' %}">
