Change likert for slider, update heroku settings

--- a/instructions/consent.html
+++ b/instructions/consent.html
@@ -26,7 +26,7 @@
 In this study, we want to learn more about how people behave on social media.
 The study consists of multiple parts, including instructions, questions and interacting within a social media platform.
 Your full participation in this study will require approximately <b>15 – 20 minutes</b>, please make sure that you have sufficient time to complete it.
-The interaction within the social media platform part will be short and fast paced. For this short period you will need your full attention. Please try to remove any distractions now before you continue (e.g sounds).
+The interaction within the social media platform part will be short and fast paced. For this short period you will need your full attention. Please try to remove any distractions now before you continue (e.g sounds, your phone).
 
 <br><br>
 At the end of the study, several demographic questions will be asked for statistical purposes. <b>Your identity will remain completely anonymous. </b>
