--- a/instructions/instruct_0.html
+++ b/instructions/instruct_0.html
@@ -12,6 +12,10 @@
     }
 </style>
   
+<p><b>Please read carefully the information below. At the end of this instructions, you will be asked some comprehension questions to make sure
+    they were understood properly. </b></p>
+
+    <br>    
 <p>In this study, you will be interacting within a platform that is meant to resemble aspects of social media (for example, Instagram).
 You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in the Feed. </p>
 
