--- a/meme_game/HowDoYaFeel.html
+++ b/meme_game/HowDoYaFeel.html
@@ -5,7 +5,8 @@
 {{ block content }}
 
 <!-- In this HTML page i tried to code a Likert scale three different ways: with the oTree predefined variables,
-with raw HTML code that looked ugly, and then with a combination of CSS and HTML that worked -->
+with raw HTML code that looked ugly, and then with a combination of CSS and HTML that worked. 
+Earlier versions can be accessed by earlier commits -->
 
 <!-- I also learnt that when you want to 
 ...use CSS, you write style;
@@ -22,115 +23,101 @@ with raw HTML code that looked ugly, and then with a combination of CSS and HTML
       var TEnd         = new Date().getTime();
   </script>
 
-<!-- {{ form.errors }} -->
+<style>
+  .fit {
+      width: 70%;
+  }
+</style>
 
-<div class="wrap">
-    <!-- <h1 class="likert-header">This is a Likert Scale survey</h1> -->
-    <form action="" >
-      <label class="statement">I feel...</label>
-      <ul class='likert'>
-        <li>
-          <input type="radio" name="EmotionalStatus" id="EmotionalStatus" value="1">
-          <label>Strongly negative</label>
-        </li>
-        <li>
-          <input type="radio" name="EmotionalStatus" id="EmotionalStatus" value="2">
-          <label>Negative</label>
-        </li>
-        <li>
-          <input type="radio" name="EmotionalStatus" id="EmotionalStatus" value="3">
-          <label>Neutral</label>
-        </li>
-        <li>
-          <input type="radio" name="EmotionalStatus" id="EmotionalStatus" value="4">
-          <label>Positive</label>
-        </li>
-        <li>
-          <input type="radio" name="EmotionalStatus" id="EmotionalStatus" value="5">
-          <label>Strongly positive</label>
-        </li>
-      </ul>
-      <div class="buttons">
-        <!-- <button class="clear">Clear</button> -->
-         <button class="btn btn-primary">Submit</button> 
-      </div>
-    </form> 
+<br>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+  <p>1 = Extremely negative / 100 = Extremely positive</p>
+  <div class="slidecontainer">
+  <input type="range" min="1" max="100" value="50" class="slider" name="EmotionalStatus" id="EmotionalStatus">
+  <p>Rating: <span id="EmotionalStatus_value"></span></p>
+  </div>
+
+<div class="buttons">
+  <button class="btn btn-primary">Submit</button> 
 </div>
-
-
-<!-- css code to make it pretty -->
+</body>
+</html>
 
 <style>
-html,body {padding:0;margin:0;}
-.wrap {
-  font:12px Arial, san-serif;
-}
-h1.likert-header {
-  padding-left:4.25%;
-  margin:20px 0 0;
-}
-form .statement {
-  display:block;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 30px 0 0 4.25%;
-  margin-bottom:10px;
-}
-form .likert {
-  list-style:none;
-  width:100%;
-  margin:0;
-  padding:0 0 35px;
-  display:block;
-  border-bottom:2px solid #efefef;
-}
-form .likert:last-of-type {border-bottom:0;}
-form .likert:before {
-  content: '';
-  position:relative;
-  top:11px;
-  left:9.5%;
-  display:block;
-  background-color:#efefef;
-  height:4px;
-  width:78%;
-}
-form .likert li {
-  display:inline-block;
-  width:19%;
-  text-align:center;
-  vertical-align: top;
-}
-form .likert li input[type=radio] {
-  display:block;
-  position:relative;
-  top:0;
-  left:50%;
-  margin-left:-6px;
+  .slidecontainer {
+  width: 70%;
   
-}
-form .likert li label {width:100%;}
-form .buttons {
-  margin:30px 0;
-  padding:0 4.25%;
-  text-align:right
-} 
-form .buttons button {
-  padding: 5px 10px;
-  background-color: #67ab49;
-  border: 0;
-  border-radius: 3px;
-}
-/* form .buttons .clear {background-color: #e9e9e9;} */
-form .buttons .btn-primary {background-color: #67ab49;} 
-/* form .buttons .clear:hover {background-color: #ccc;} */
-form .buttons .btn-primary:hover {background-color: #14892c;}    
- 
- /* don't need this because i erased the buttons of submitting and clearing */
- </style>
+  }
+  
+  .slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  }
+  
+  .slider:hover {
+  opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+  }
+  
+  html,body {padding:0;margin:0;}
+  .wrap {
+    font:12px Arial, san-serif;
+    text-align: center;
+  }
+  
+  form .buttons {
+    margin:30px 0;
+    padding:0 4.25%;
+    text-align:right
+  } 
+  form .buttons button {
+    padding: 5px 10px;
+    background-color: #67ab49;
+    border: 0;
+    border-radius: 3px;
+  }
+  
+  form .buttons .btn-primary {background-color: #67ab49;} 
+  form .buttons .btn-primary:hover {background-color: #14892c;}    
+  
+</style>
 
 <script>
-  document.getElementById('EmotionalStatus').value // = 42; what is this value thing??
+var slider = document.getElementById("EmotionalStatus");
+var output = document.getElementById("EmotionalStatus_value");
+output.innerHTML = slider.value;
+
+slider.oninput = function() {
+output.innerHTML = this.value;
+}
 
   document.addEventListener("DOMContentLoaded", function(debug=true) {
           console.log('Loading info');
@@ -156,36 +143,6 @@ form .buttons .btn-primary:hover {background-color: #14892c;}
       });
 </script>
 
-<!-- {{ form.EmotionalStatus.errors }}   -->
-<!-- can i delete this -->
-
-<!-- TRIAL 2. 
-    RAW HTML + JAVASCRIPT TO GET THE VALUE BY ID
-
-<label class="col-form-label"> 
-    How would you describe your current emotional status?
-</label>
-
-<div class="input-group">
-    <span class="input-group-text">Strongly negative</span>
-    <input type="range" name="EmotionalStatus" id="EmotionalStatus"  min="1" max="7" step="1" class="form-range">
-    <span class="input-group-text">Strongly positive</span>
-</div> -->
-
-<!--  TRIAL 3. 
-    OTREE
-    this is how you could do it with oTree but it looks soooo ugly D: 
-<tr>
-    <td>{{ form.EmotionalStatus.label }}</td>
-    {{ for choice in form.EmotionalStatus }}
-        <td>{{ choice }}</td> 
-         you need to define the choices in player field in your init.py 
-    {{ endfor }}
-</tr> -->
-
-
-
-    <!-- {{ next_button }} -->
 {{ endblock }}
 
 
