Introduces changes suggested by Beta testers

--- a/meme_game/Feedback.html
+++ b/meme_game/Feedback.html
@@ -6,7 +6,7 @@
 
 <div class="centered">
 <p id="liketext"><label id="iLikes" value="{{l}}">{{l}}</label>  <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span> people out of 40 liked your post</p>
-<p id="disliketext"><label id="iDislikes" value="{{d}}">{{d}}</label> <span style="font-size:100%; color:rgb(128, 18, 18);">&#128148;</span>      people out of 40 did not like your post</p>
+<p id="disliketext"><label id="iDislikes" value="{{d}}">{{d}}</label> <span style="font-size:100%; color:rgb(128, 18, 18);">&#128148;</span>      people out of 40 <b>did not</b> like your post</p>
 </div>
 <br>
 <br>
