Introduces changes suggested by Beta testers

--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -31,12 +31,12 @@
 
     <div class="instructions well">
 
-        <form id="postquiz" action="debrief" method="post">
+      <form id="postquiz" action="debrief" method="post">
 
        Please add 3 tags to your meme here if you want.
        
-       <div class="polaroid">
-        <img src= {{ static Image }} style="width:100%">
+      <div class="polaroid">
+        <img src= {{ static Image }} style="width:40%">
         <div class="container">
           <p>Your post</p>
         </div>
@@ -83,7 +83,8 @@
 
 <style>
 div.polaroid {
-  width: 80%;
+  text-align: center;
+  width: 40%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
