--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -21,7 +21,7 @@
 </script>
 
 
-<div id="container-questionnaire">
+<div id="centered">
   <br>
   <br>
   <br>
@@ -35,19 +35,20 @@
 
        Please add 3 tags to your meme here if you want.
        
-      <div class="polaroid">
-        <img src= {{ static Image }} style="width:40%">
-        <div class="container">
-          <p>Your post</p>
+        <div class="polaroid">
+          <img src= {{ static Image }} style="width:50%">
+          <div class="container">
+            <p>Your post</p>
+          </div>
         </div>
-      </div>
        <br/> 
-        <textarea rows="1" cols="30" maxlength="20" name="sTag1" id="sTag1" ></textarea>
-        <br>
-<textarea rows="1" cols="30"  maxlength="20" name="sTag2" id="sTag2" ></textarea>
- <br>
-<textarea rows="1" cols="30"  maxlength="20" name="sTag3" id="sTag3" ></textarea>
-
+      <textarea rows="1" cols="30" maxlength="20" name="sTag1" id="sTag1" ></textarea>
+      <br>
+      <textarea rows="1" cols="30"  maxlength="20" name="sTag2" id="sTag2" ></textarea>
+      <br>
+      <textarea rows="1" cols="30"  maxlength="20" name="sTag3" id="sTag3" ></textarea>
+    </div>
+</div>
 <!-- If you want to make it obligatory for the people to fill in a value before
   submitting a form then you need to add REQUIRED ᶘ ᵒᴥᵒᶅ at the end, like this:
   <textarea rows="1" cols="30"  maxlength="20" name="tag3" id="tag3" required></textarea> 
@@ -84,7 +85,7 @@
 <style>
 div.polaroid {
   text-align: center;
-  width: 40%;
+  width: 50%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -95,8 +96,14 @@ div.container {
   padding: 10px 20px;
 }
 
+.centered {
+      text-align: center;
+      max-width:100%;
+      max-height:100%;
+    }
+
 h1 {
-    /* text-align: center; */
+    text-align: center;
     color: #333;
     letter-spacing: 0.05em;
     margin: 0 0 0.4em;
