Introduces changes suggested by Beta testers

--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -28,25 +28,22 @@
 
     <hr>
 
-    <div class="instructions well">
-
-      <form id="postquiz" action="debrief" method="post">
-
        Please add 3 tags to your meme here if you want.
        <br>
         <div class="polaroid">
-          <img src= {{ static Image }} style="width:50%" class="center">
+          <img src= {{ static Image }} class="center">
           <div class="container">
             <p>Your post</p>
           </div>
         </div>
+   
        <br/> 
       <textarea rows="1" cols="30" maxlength="20" name="sTag1" id="sTag1" ></textarea>
       <br>
       <textarea rows="1" cols="30"  maxlength="20" name="sTag2" id="sTag2" ></textarea>
       <br>
       <textarea rows="1" cols="30"  maxlength="20" name="sTag3" id="sTag3" ></textarea>
-    </div>
+ 
 </div>
 <!-- If you want to make it obligatory for the people to fill in a value before
   submitting a form then you need to add REQUIRED ᶘ ᵒᴥᵒᶅ at the end, like this:
