Introduces changes suggested by Beta testers

--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -30,13 +30,15 @@
 
        Please add 3 tags to your meme here if you want.
        <br>
+       <br>
+       <div class="center">
         <div class="polaroid">
           <img src= {{ static Image }} class="center">
           <div class="container">
             <p>Your post</p>
           </div>
         </div>
-   
+      </div>
        <br/> 
       <textarea rows="1" cols="30" maxlength="20" name="sTag1" id="sTag1" ></textarea>
       <br>
