--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -33,7 +33,7 @@
        <br>
        <div class="center">
         <div class="polaroid">
-          <img src= {{ static Image }} class="center">
+          <img src= {{ static Image }}>
           <div class="container">
             <p>Your post</p>
           </div>
