Introduces changes suggested by Beta testers

--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -33,7 +33,7 @@
        <br>
        <div class="center">
         <div class="polaroid">
-          <img src= {{ static Image }}>
+          <img src= {{ static Image }} style="width:60%">
           <div class="container">
             <p>Your post</p>
           </div>
@@ -83,7 +83,7 @@
 <style>
 div.polaroid {
   text-align: center;
-  width: 65%;
+  width: 60%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -98,7 +98,7 @@ div.container {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 60%;
   }
 
 .centered {
