--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -31,14 +31,14 @@
        Please add 3 tags to your meme here if you want.
        <br>
        <br>
-       <div class="center">
+    
         <div class="polaroid">
-          <img src= {{ static Image }} style="width:60%">
+          <img src= {{ static Image }} style="width:60%" class="center">
           <div class="container">
             <p>Your post</p>
           </div>
         </div>
-      </div>
+
        <br/> 
       <textarea rows="1" cols="30" maxlength="20" name="sTag1" id="sTag1" ></textarea>
       <br>
@@ -96,8 +96,8 @@ div.container {
 
 .center {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20%;
+    margin-right: 20%;
     width: 60%;
   }
 
