--- a/meme_game/Feed.html
+++ b/meme_game/Feed.html
@@ -37,9 +37,105 @@
     #dislike {
         padding-left: 1em;
     }
+
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap');
+
+* {
+	box-sizing: border-box;
+}
+
+    /* body {
+	background-color: #fafafa;
+	font-family: 'Open Sans', sans-serif;
+	padding-bottom: 100px;
+} */
+
+    .container {
+	margin: 0 auto;
+	max-width: 600px;
+}
+
+    .blog-post {
+	background-color: #fff;
+    box-shadow: 0px 1px 2px rgba(50, 50, 50, .1), 
+		0px 2px 4px rgba(60, 60, 60, 0.1);
+	border-radius: 4px;
+	padding: 40px;
+	margin: 20px 0;
+}
+
+.title {
+	margin: 0;
+}
+
+.text {
+	color: #555;
+	margin: 20px 0;
+}
+
+.user-info {
+	display: flex;
+	align-items: center;
+}
+
+.user-info img {
+	border-radius: 50%;
+	height: 30px;
+	width: 30px;
+}
+
+.user-info span {
+	font-size: 13px;
+	margin-left: 10px;
+}
+
+.loading {
+	opacity: 0;
+	display: flex;
+	position: fixed;
+	bottom: 50px;
+	left: 50%;
+	transform: translateX(-50%);
+	transition: opacity .3s ease-in;
+}
+
+.loading.show {
+	opacity: 1;
+}
+
+.ball {
+	background-color: #777;
+	border-radius: 50%;
+	margin: 5px;
+	height: 10px;
+	width: 10px;
+	animation: jump .5s ease-in infinite;
+}
+
+.ball:nth-of-type(2) {
+	animation-delay: 0.1s;
+}
+
+.ball:nth-of-type(3) {
+	animation-delay: 0.2s;
+}
+
+@keyframes jump {
+	0%, 100% {
+		transform: translateY(0);
+	}
+	
+	50% {
+		transform: translateY(-10px);
+	}
+}    
 </style>
 
+
+
+
 <script>
+
     // Hidden Next Button
     let EndButton               = document.createElement('button');
     EndButton.style.visibility  = 'hidden';
@@ -107,5 +203,197 @@
     </div>
 </div>
 
+<!-- <div class="container" id="container">
+	<h1>Blog Posts</h1>
+	<div class="blog-post">
+		<h2 class="title">Blog post title</h2>
+		<p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident quod debitis in repellat veritatis minus ab ex maiores itaque quis.</p>
+		<div class="user-info">
+			<img src="https://randomuser.me/api/portraits/women/26.jpg" alt="pic" />
+			<span>Leah Taylor</span>
+		</div>
+	</div>
+</div> -->
+
+<div class="loading">
+	<div class="ball"></div>
+	<div class="ball"></div>
+	<div class="ball"></div>
+</div>
+
+<div class="container">
+</div>
+<div class="loading">
+  <div class="child-1"></div>
+</div>
+
+<div id="id01"></div>
+
+<script>
+const container = document.querySelector(".container");
+// const url = "https://meme-api.herokuapp.com/gimme" // this is a random meme API?
+const url = "https://picsum.photos/600";
+// const url = "https://github.com/lalalavi/meme-experiment/tree/main/_static/feed_memes/feed"
+var images = [];
+var page = 1;
+
+// OnScroll event (Taken from Florin Pop's Infinite Scroll - https://codepen.io/FlorinPop17/pen/RwwvKYJ)
+
+window.addEventListener("scroll", () => {
+  const { scrollTop, scrollHeight, clientHeight } = document.documentElement;
+  // console.log({ scrollTop, scrollHeight, clientHeight });
+  if (clientHeight + scrollTop >= scrollHeight - 5) {
+    loadImages(6);
+  }
+});
+
+function loadImages(range) {
+  for (let i = 0; i < range; i++) {
+    let image = document.createElement("div");
+
+    image.classList.add("col");
+
+    // HOW TO DO IT WITH MINE
+    // image.innerHTML = `
+    //    <img src="${url}${+ i + 3}.jpg" alt="" />
+    // `;
+
+    // ORIGINAL EXAMPLE
+    image.innerHTML = `
+        // <img src="${url}?t=${new Date().getTime() + i }" alt="" />
+        <img src="${url}?t=${+ i}" alt="" />
+    `;
+
+    container.appendChild(image);
+  }
+}
+
+loadImages(9);    
+
+// async function getPost() {
+//     console.log(scrollol);
+// 	const newMeme = await fetch(`https://jsonplaceholder.typicode.com/photos${getRandomNr()}`);
+//     // const postResponse = await fetch([`https://github.com/lalalavi/meme-experiment/tree/main/_static/feed_memes/feed${getRandomNr()}.jpg`]);
+//     //const postResponse = await fetch(js_vars.scrollol);
+//    // const postResponse = await fetch {{ js_vars.scrollol }};
+//     const postData = await newMeme.json();
+	
+// 	// const userResponse = await fetch('https://randomuser.me/api');
+// 	// const userData = await userResponse.json();
+	
+// 	// const data = { post: postData, user: userData.results[0] };
+	
+//     const data = { post: postData };
+
+// 	addDataToDOM(data);
+// }
+
+
+
+
+
+
+document.addEventListener("DOMContentLoaded", function(debug=true) {
+        console.log('Loading info');
+
+        let OtreeBody     = document.getElementsByClassName("_otree-content")[0];
+        OtreeBody.appendChild(iDec);
+        OtreeBody.appendChild(dRT);
+        OtreeBody.appendChild(EndButton);
+
+        // Add event listener for pressing L
+        document.addEventListener("keyup", function(event) {
+        if (event.keyCode === 76) {
+            // change input value
+            iDec.value = 1;
+            console.log('L was pressed');
+            // press next button
+            TEnd      = new Date().getTime();
+            dRT.value = +TEnd -TStart;
+            EndButton.click();
+        }
+        });
+        document.addEventListener("keyup", function(event) {
+        if (event.keyCode === 75) {
+            iDec.value = 2;
+            console.log('K was pressed');
+            TEnd      = new Date().getTime();
+            dRT.value = +TEnd -TStart;
+            EndButton.click();
+            }
+        });
+    });
+</script>
+
+
+<style>
+
+body {
+  margin: 0;
+  height: 100vh;
+  background-color: rgb(236, 236, 236);
+  font-family: "Roboto", sans-serif;
+}
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+  margin-bottom: 3rem;
+  font-size: 14px;
+}
+.container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.col {
+  border-radius: 5px;
+  padding: 0;
+  border: none;
+  transition: 0.3s;
+  margin-right: 5px;
+  margin-left: 5px;
+  }
+
+.img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    transition: 0.3s;
+    cursor: pointer;
+    box-shadow: 0px 6px 30px -9px rgba(0, 0, 0, 0.28);
+    }
+
+.loading {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 2px solid transparent;
+  animation: rotate 1.5s ease-in infinite;
+  border-top-color: #ff7f50;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem auto;   
+}
+.child-1 {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border: 2px solid transparent;
+    animation: rotate 1.5s ease-in infinite;
+    border-bottom-color: #ff7f50;
+    transition: 2s all;
+}
+
+
+
+    
+
+</style>
 
 {% endblock %}
