on/off button counter

--- a/meme_game/Feed.html
+++ b/meme_game/Feed.html
@@ -78,7 +78,6 @@ iFeedDislikes.name       = 'iFeedDislikes';
 iFeedDislikes.id         = 'iFeedDislikes';
 iFeedDislikes.value      = '';
 
-
 window.addEventListener("scroll", () => {
   const { scrollTop, scrollHeight, clientHeight } = document.documentElement;
   // console.log({ scrollTop, scrollHeight, clientHeight });
@@ -166,7 +165,11 @@ function loadImages(range) {
     });
 
     // if one element is active for each pair, the other one needs to not be active. last function
-
+    // $(function() {
+    //   $('div[id^="button"]').click(function() {
+        
+    //   });
+    // });
 };
 
 
